force-app/main/default/objects/CRMforNonProfit__Darujme_Donation__c/CRMforNonProfit__Darujme_Donation__c.object-meta.xml
<CustomObject>
    <label>Darujme Donation</label>
    <nameField>
        <displayFormat>SKT-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Darujme Donations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>