force-app/main/default/objects/CRMforNonProfit__Darujme_Donation__c/fields/CRMforNonProfit__Address__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Address__c</fullName>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>