force-app/main/default/objects/CRMforNonProfit__Darujme_Donation__c/fields/CRMforNonProfit__Campaign__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Campaign__c</fullName>
    <label>Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>