force-app/main/default/objects/CRMforNonProfit__Darujme_Donation__c/fields/CRMforNonProfit__Created_At__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Created_At__c</fullName>
    <label>Created At</label>
    <type>Date</type>
</CustomField>