force-app/main/default/objects/CRMforNonProfit__Darujme_Donation__c/fields/CRMforNonProfit__DIC__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__DIC__c</fullName>
    <label>DIČ</label>
    <length>20</length>
    <type>Text</type>
</CustomField>