force-app/main/default/objects/CRMforNonProfit__Darujme_Donation__c/fields/CRMforNonProfit__Email__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>