force-app/main/default/objects/CRMforNonProfit__Darujme_Donation__c/fields/CRMforNonProfit__External_Identifier__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__External_Identifier__c</fullName>
    <label>External Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>