force-app/main/default/objects/CRMforNonProfit__Darujme_Donation__c/fields/CRMforNonProfit__ICO__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__ICO__c</fullName>
    <label>IČO</label>
    <length>10</length>
    <type>Text</type>
</CustomField>