force-app/main/default/objects/CRMforNonProfit__Darujme_Donation__c/fields/CRMforNonProfit__ICO_DPH__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__ICO_DPH__c</fullName>
    <label>IČO DPH</label>
    <length>20</length>
    <type>Text</type>
</CustomField>