force-app/main/default/objects/CRMforNonProfit__Darujme_Donation__c/fields/CRMforNonProfit__ID__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__ID__c</fullName>
    <externalId>true</externalId>
    <label>ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>