force-app/main/default/objects/CRMforNonProfit__Darujme_Donation__c/fields/CRMforNonProfit__Nazev_firmy__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Nazev_firmy__c</fullName>
    <label>Název firmy</label>
    <length>40</length>
    <type>Text</type>
</CustomField>