force-app/main/default/objects/CRMforNonProfit__Darujme_Donation__c/fields/CRMforNonProfit__Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>card</fullName>
            </value>
            <value>
                <fullName>transfer</fullName>
            </value>
            <value>
                <fullName>tatrapay</fullName>
            </value>
            <value>
                <fullName>sporopay</fullName>
            </value>
            <value>
                <fullName>eplatby</fullName>
            </value>
            <value>
                <fullName>uniplatba</fullName>
            </value>
            <value>
                <fullName>pobapay</fullName>
            </value>
            <value>
                <fullName>webpay</fullName>
            </value>
            <value>
                <fullName>otppay</fullName>
            </value>
            <value>
                <fullName>csobpay</fullName>
            </value>
            <value>
                <fullName>paybysquare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>