force-app/main/default/objects/CRMforNonProfit__Darujme_Donation__c/fields/CRMforNonProfit__Periodicity__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Periodicity__c</fullName>
    <label>Periodicity</label>
    <length>30</length>
    <type>Text</type>
</CustomField>