force-app/main/default/objects/CRMforNonProfit__Darujme_Donation__c/fields/CRMforNonProfit__Periodicity_No__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Periodicity_No__c</fullName>
    <label>Periodicity No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>