force-app/main/default/objects/CRMforNonProfit__Darujme_Donation__c/fields/CRMforNonProfit__Status__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>none</fullName>
            </value>
            <value>
                <fullName>pending</fullName>
            </value>
            <value>
                <fullName>authorized</fullName>
            </value>
            <value>
                <fullName>settled</fullName>
            </value>
            <value>
                <fullName>failed</fullName>
            </value>
            <value>
                <fullName>expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>