force-app/main/default/objects/CRMforNonProfit__Darujme_Donation__c/fields/CRMforNonProfit__Variable_Symbol__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Variable_Symbol__c</fullName>
    <label>Variable Symbol</label>
    <length>20</length>
    <type>Text</type>
</CustomField>