force-app/main/default/objects/CRMforNonProfit__Darujme_Donation__c/listViews/CRMforNonProfit__All.listView-meta.xml
<ListView>
    <fullName>CRMforNonProfit__All</fullName>
    <columns>NAME</columns>
    <columns>CRMforNonProfit__Amount__c</columns>
    <columns>CRMforNonProfit__Email__c</columns>
    <columns>CRMforNonProfit__First_Name__c</columns>
    <columns>CRMforNonProfit__ID__c</columns>
    <columns>CRMforNonProfit__Last_Name__c</columns>
    <columns>CRMforNonProfit__Status__c</columns>
    <columns>CRMforNonProfit__Created_At__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>